# ctf-template

./: CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: template-request.yml
.github/workflows/: library.yml  release.yml
_library/adapter/: Dockerfile  README.md  init.c
nc-file/: Dockerfile  README.md  docker-compose.yml
nc-file-pow/: Dockerfile  README.md  docker-compose.yml
nc-file-pow/src/: ask.c
nc-python/: Dockerfile  README.md  docker-compose.yml
nc-python/src/: main.py
web-php/: Dockerfile  README.md  docker-compose.yml
web-php/src/: index.php
web-python-flask/: Dockerfile  README.md  docker-compose.yml
web-python-flask/src/: main.py
web-rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
web-rust/src/: main.rs
web-rust/static/: index.html
